Readme hinzugefügt, Datenbank hinzugefügt

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-APP_ENV=local
-APP_DEBUG=true
+APP_ENV=production
+APP_DEBUG=false
 APP_KEY=JznfqgABqfVsMeqPstAPOY03VjM5Ysxr
 
 DB_HOST=localhost
@@ -12,7 +12,7 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mail.ssr-dresden.de
+MAIL_HOST=""
 MAIL_PORT=25
-MAIL_USERNAME=projekt@ssr-dresden.de
-MAIL_PASSWORD=lyPs^936
+MAIL_USERNAME=""
+MAIL_PASSWORD=""
