--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ APP_KEY=JznfqgABqfVsMeqPstAPOY03VjM5Ysxr
 
 DB_HOST=localhost
 DB_DATABASE=laravel
-DB_USERNAME=projekt
-DB_PASSWORD=123456
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
